@@ -1,4 +1,4 @@
-{% extends "three_columns.html" %}
+{% extends "two_columns.html" %}
 
 <!-- $Id$ -->
 
